--- a/html_beforeAfter/index.html
+++ b/html_beforeAfter/index.html
@@ -11,6 +11,7 @@
 
     <!--Position absolute and relative-->
     <div class="work">
+        <h1>Position Absolute and Realative Example</h1>
         <div class="work-img">
             <img src="img/slider-1.jpg" alt="">
         </div>
@@ -23,6 +24,19 @@
         </div>
     </div>
      <!--End of Position absolute and relative-->
-     
+
+     <!--Before and After Example with overlay-->
+     <div class="service-area">
+        <h2>Before Example</h2>
+        <div class="service">
+            <a href="#"><img src="img/slider-1.jpg" alt="Slider-1"></a>
+        </div>
+        <h2>Before and After Example</h2>
+        <div class="service-after">
+            <a href="#"><img src="img/slider-1.jpg" alt="Slider-1"></a>
+        </div>
+     </div>
+     <!--End of Before and After Example with overlay-->
+
 </body>
 </html>
