--- a/html_beforeAfter/index.html
+++ b/html_beforeAfter/index.html
@@ -38,5 +38,11 @@
      </div>
      <!--End of Before and After Example with overlay-->
 
+      <!--Before and After Example with Heading Title-->
+
+      <div class="title">
+        <h1>Hello Everyone</h1>
+      </div>
+
 </body>
 </html>
